2006-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.8.xml: Documents service in .amandahosts.

2006-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	Previous patch doesn't work because 'make -j2' will use fd 3.
	* amandad-src/Makefile.am: Use a temporary file for output of
				   'make listlibsrc'.
	* changer-src/Makefile.am: Ditto.
	* client-src/Makefile.am: Ditto.
	* common-src/Makefile.am: Ditto.
	* oldrecover-src/Makefile.am: Ditto.
	* recover-src/Makefile.am: Ditto.
	* restore-src/Makefile.am: Ditto.
	* server-src/Makefile.am: Ditto.
	* tape-src/Makefile.am: Ditto.

2006-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/Makefile.am: 'make listlibsrc' send it's ouput to fd 3.
	* changer-src/Makefile.am: Ditto.
	* client-src/Makefile.am: Ditto.
	* common-src/Makefile.am: Ditto.
	* oldrecover-src/Makefile.am: Ditto.
	* recover-src/Makefile.am: Ditto.
	* restore-src/Makefile.am: Ditto.
	* server-src/Makefile.am: Ditto.
	* tape-src/Makefile.am: Ditto.

2006-05-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c (read_dumptype): Parse SSH_KEYS.

2006-05-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (udp_inithandle): Remove bad merge.
	* server-src/amindexd.c: Improve error message.
	* server-src/planner.c: Add a space in output.

2006-05-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c: Set dpcur.no_hold correctly,
				 Fix for conffile program.

2006-05-26  Jean-Louis Martineau <martineau@zmanda.com>
	Allow many services to share the same tcp connection for
	bsdtcp/ssh/rsh.
	Add a security_close_connection to the security-api.
	* amandad-src/amandad.c (wait_30s, exit_on_qlength): New variable to
					control auth specific behaviour.
	* common-src/bsd-security.c: Add sec_close_connection_none.
	* common-src/bsdudp-security.c: Add sec_close_connection_none.
	* common-src/krb4-security.c: Add sec_close_connection_none.